content/docs/v1.3/configuration/triggers/kafka/index.mdx
---
title: "Kafka"
description: "The kafka trigger lets you publish container update notifications to a Kafka topic."
---

import { Callout } from 'fumadocs-ui/components/callout';
import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

![logo](/docs/assets/configuration/triggers/kafka/kafka.png)

The `kafka` trigger lets you publish container update notifications to a Kafka topic.

## Variables

| Env var | Required | Description | Supported values | Default value when missing |
| --- | :---: | --- | --- | --- |
| `DD_TRIGGER_KAFKA_{trigger_name}_BROKERS` | 🔴 | Comma separated list of Kafka brokers | | |
| `DD_TRIGGER_KAFKA_{trigger_name}_SSL` | ⚪ | Is SSL enabled on the TLS connection | `true`, `false` | `false` |
| `DD_TRIGGER_KAFKA_{trigger_name}_TOPIC` | ⚪ | The name of the topic to publish | | `drydock-container` |
| `DD_TRIGGER_KAFKA_{trigger_name}_AUTHENTICATION_TYPE` | ⚪ | The type for authentication | `PLAIN`, `SCRAM-SHA-256`, `SCRAM-SHA-12` | `PLAIN` |
| `DD_TRIGGER_KAFKA_{trigger_name}_AUTHENTICATION_USER` | ⚪ | The name of the user (required if authentication is enabled) | | |
| `DD_TRIGGER_KAFKA_{trigger_name}_AUTHENTICATION_PASSWORD` | ⚪ | The password of the user (required if authentication is enabled) | | |

<Callout type="warn">The topic must already exist on the broker (the trigger won't automatically create it)</Callout>

<Callout type="info">This trigger also supports the [common configuration variables](/docs/configuration/triggers/#common-trigger-configuration).</Callout>

## Examples

### Post a message to a&nbsp;[Cloud Karafka](https://www.cloudkarafka.com/) broker

<Tabs items={["Docker Compose", "Docker"]}>
<Tab value="Docker Compose">

```yaml
services:
  drydock:
    image: codeswhat/drydock
    ...
    environment:
        - DD_TRIGGER_KAFKA_KARAKFA_BROKERS=ark-01.srvs.cloudkafka.com:9094,ark-02.srvs.cloudkafka.com:9094,ark-03.srvs.cloudkafka.com:9094
        - DD_TRIGGER_KAFKA_KARAKFA_SSL="true
        - DD_TRIGGER_KAFKA_KARAKFA_TOPIC=my-user-id-drydock-image
        - DD_TRIGGER_KAFKA_KARAKFA_AUTHENTICATION_USER=my-user-id
        - DD_TRIGGER_KAFKA_KARAKFA_AUTHENTICATION_PASSWORD=my-secret
        - DD_TRIGGER_KAFKA_KARAKFA_AUTHENTICATION_TYPE=SCRAM-SHA-256
```

</Tab>
<Tab value="Docker">
```bash
docker run \
    -e DD_TRIGGER_KAFKA_KARAKFA_BROKERS="ark-01.srvs.cloudkafka.com:9094,ark-02.srvs.cloudkafka.com:9094,ark-03.srvs.cloudkafka.com:9094" \
    -e DD_TRIGGER_KAFKA_KARAKFA_SSL="true" \
    -e DD_TRIGGER_KAFKA_KARAKFA_TOPIC="my-user-id-drydock-image" \
    -e DD_TRIGGER_KAFKA_KARAKFA_AUTHENTICATION_USER="my-user-id" \
    -e DD_TRIGGER_KAFKA_KARAKFA_AUTHENTICATION_PASSWORD="my-secret" \
    -e DD_TRIGGER_KAFKA_KARAKFA_AUTHENTICATION_TYPE="SCRAM-SHA-256" \
  ...
  codeswhat/drydock
```
</Tab>
</Tabs>

### Example of published record

```json
{
  "id":"31a61a8305ef1fc9a71fa4f20a68d7ec88b28e32303bbc4a5f192e851165b816",
  "name":"homeassistant",
  "watcher":"local",
  "includeTags":"^\\d+\\.\\d+.\\d+$",
  "image":{
    "id":"sha256:d4a6fafb7d4da37495e5c9be3242590be24a87d7edcc4f79761098889c54fca6",
    "registry":{
      "url":"123456789.dkr.ecr.eu-west-1.amazonaws.com"
    },
    "name":"test",
    "tag":{
      "value":"2021.6.4",
      "semver":true
    },
    "digest":{
      "watch":false,
      "repo":"sha256:ca0edc3fb0b4647963629bdfccbb3ccfa352184b45a9b4145832000c2878dd72"
    },
    "architecture":"amd64",
    "os":"linux",
    "created":"2021-06-12T05:33:38.440Z"
  },
  "result":{
    "tag":"2021.6.5"
  },
  "updateAvailable": true
}
```
